# MaiQt

./: CMakeLists.txt
src/: charteditor.cpp  charteditor.h  simaiparser.cpp  simaiparser.h
